desc/tests/snapshots/desc_test__inputs@missing_toplevel_var.ninja.snap
---
source: desc/tests/desc_test.rs
expression: ast
input_file: desc/tests/inputs/missing_toplevel_var.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo ",
            ),
            inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                ],
            ],
        },
    ],
}
